--- a/custom_builds/97/distros/sakai-10.x/pom.xml
+++ b/custom_builds/97/distros/sakai-10.x/pom.xml
@@ -83,9 +83,7 @@
                 <module>mailsender</module>
                 <module>memory</module>
                 <module>message</module>
-                <module>metaobj</module>
                 <module>msgcntr</module>
-                <module>osp</module>
                 <module>podcasts</module>
                 <module>polls</module>
                 <module>portal</module>
@@ -115,9 +113,11 @@
                 <module>userauditservice</module>
                 <module>usermembership</module>
                 <module>velocity</module>
-                <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>etudes-util</module>
+                <module>melete</module>
+                <module>blogwow</module>
             </modules>
         </profile>
         <profile>
