--- a/etudes-util/etudes-util-1.0.17_sak10x/etudes-util/util/pom.xml
+++ b/etudes-util/etudes-util-1.0.17_sak10x/etudes-util/util/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>org.etudes</groupId>
 			<artifactId>etudes-util-api</artifactId>
-			<version>${etudes.util.version}</version>
+			<version>${version}</version>
 			<scope>provided</scope>
 		</dependency>
 
