--- a/custom_builds/74/distros/10.x/pom.xml
+++ b/custom_builds/74/distros/10.x/pom.xml
@@ -118,6 +118,10 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>bigbluebutton-sakai/bbb-tool</module>
+		<module>evaluation</module>
+		<module>da_evalprovider</module>
+		<module>kaltura</module>
             </modules>
         </profile>
         <profile>
