--- a/site-manage/site-manage-10.x_features-backport/site-association-tool/tool/pom.xml
+++ b/site-manage/site-manage-10.x_features-backport/site-association-tool/tool/pom.xml
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>3.10-FINAL</version>
+            <version>3.10.1</version>
         </dependency>
     </dependencies>
 </project>
