--- a/custom_builds/81/content-10.x_custom/content-bundles/resources/types.properties
+++ b/custom_builds/81/content-10.x_custom/content-bundles/resources/types.properties
@@ -80,9 +80,12 @@ avail.hide10	 	 = Hide this item
 #avail.hide2		 = Hide this folder from non-administrators
 avail.hide20		 = Hide this folder and its contents
 avail.hide30		 = Hide this folder but allow access to its contents
+avail.hide40         = Hidden
+avail.uploaded       = Uploaded items should be
 avail.show  		 = Show
 avail.show1  		 = Show this item
 avail.show2  		 = Show this folder
+avail.show40         = Visible
 avail.start  		 = Beginning
 avail.start1  		 = From
 avail.title	  	 = Availability
@@ -534,7 +537,7 @@ multiple.file.upload.group = Group:
 # SAK-23367
 notes.expandfolder=Expand folder(s) of interest and select item(s) to copy to your current site above.
 
-label.dragDescription=Drag and drop files from your desktop into the box below.
+label.dragDescription=Drag and drop files from your desktop into the box above.
 label.dragZoneMessage=Drop files here to upload.
 alert.over-site-upload-quota=Your file upload attempt could not be completed because doing so would put you over your site quota. Please check the sum total file size of all items you wish to upload before your next attempt.
 link.switch.to.dnd = Switch to Drag and Drop Upload?
