--- a/custom_builds/68/distros/10.x/pom.xml
+++ b/custom_builds/68/distros/10.x/pom.xml
@@ -54,6 +54,7 @@
                 <module>announcement</module>
                 <module>archive</module>
                 <module>assignment</module>
+                <module>attendance</module>
                 <module>authz</module>
                 <module>basiclti</module>
                 <module>calendar</module>
