--- a/custom_builds/121/distros/2.9.x/pom.xml
+++ b/custom_builds/121/distros/2.9.x/pom.xml
@@ -128,6 +128,7 @@
                 <module>velocity</module>
                 <module>warehouse</module>
                 <module>web</module>
+                <module>student-report</module>
             </modules>
         </profile>
         <profile>
