--- a/cloud-content/10.x/pom.xml
+++ b/cloud-content/10.x/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>org.sakaiproject</groupId>
     <artifactId>master</artifactId>
-    <version>10.4</version>
+    <version>10-SNAPSHOT</version>
     <relativePath>../master/pom.xml</relativePath>
   </parent>
 
   <name>Sakai Cloud Content Providers</name>
   <groupId>org.sakaiproject.content</groupId>
   <artifactId>cloud-content</artifactId>
-  <version>10.4</version>
+  <version>10-SNAPSHOT</version>
   <packaging>pom</packaging>
   <organization>
     <name>Sakai Foundation</name>
