--- a/cloud-content/10.x/impl/pom.xml
+++ b/cloud-content/10.x/impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sakaiproject.content</groupId>
     <artifactId>cloud-content</artifactId>
-    <version>10.4</version>
+    <version>10-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
