--- a/custom_builds/121/distros/2.9.x/pom.xml
+++ b/custom_builds/121/distros/2.9.x/pom.xml
@@ -129,6 +129,8 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>student-report</module>
+                <module>rsmart</module>
+                <module>gradebook2</module>
             </modules>
         </profile>
         <profile>
