--- a/custom_builds/6/distros/11.x/pom.xml
+++ b/custom_builds/6/distros/11.x/pom.xml
@@ -117,6 +117,7 @@
                 <module>web</module>
                 <module>webservices</module>
                 <module>blogwow</module>
+                <module>da_evalprovider</module>
             </modules>
         </profile>
         <profile>
