--- a/custom_builds/142/distros/11.x/pom.xml
+++ b/custom_builds/142/distros/11.x/pom.xml
@@ -122,6 +122,8 @@
                 <module>gcalendar</module>
                 <module>webservices</module>
                 <module>kaltura</module>
+                <module>irubric-core</module>
+                <module>irubric-tool</module>
                 <!--
                 <module>gradebook2</module>
                 -->
