--- a/custom_builds/163/cloud-content/impl/pom.xml
+++ b/custom_builds/163/cloud-content/impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sakaiproject.content</groupId>
     <artifactId>cloud-content</artifactId>
-    <version>2.9-SNAPSHOT</version>
+    <version>2.9.3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
