--- a/custom_builds/163/cloud-content/pom.xml
+++ b/custom_builds/163/cloud-content/pom.xml
@@ -11,7 +11,7 @@
   <name>Sakai Cloud Content Providers</name>
   <groupId>org.sakaiproject.content</groupId>
   <artifactId>cloud-content</artifactId>
-  <version>2.9-SNAPSHOT</version>
+  <version>2.9.3</version>
   <packaging>pom</packaging>
   <organization>
     <name>Sakai Foundation</name>
